--- a/jenkinsFile
+++ b/jenkinsFile
@@ -1,18 +1,18 @@
 pipeline {
     agent any
     stages {
-        stage("build"){
-            steps{
+        stageb ("build") {
+            steps {
                 echo "building my app..."
             }
         }
-        stage("test"){
-            steps{
+        stage ("test") {
+            steps {
                 echo "testing my app..."
             }
         }
-        stage("deploy"){
-            steps{
+        stage ("deploy") {
+            steps {
                 echo "deploying my app..."
             }
         }
