--- a/package.json
+++ b/package.json
@@ -2,23 +2,28 @@
   "name": "countries_app1",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://victor-grinan-dev.github.io/countries_app1/",
   "dependencies": {
+    "-": "^0.0.1",
     "@reduxjs/toolkit": "^1.8.5",
-    "react-redux": "^8.0.2",
     "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
+    "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.26.2",
-    "react-scripts": "5.0.1"
-    
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "save-dev": "^0.0.1-security"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
