--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "src/index.js",
   "type": "commonjs",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon src/index.js"
+    "start": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.3"
   }
