--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,7 @@
     "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "save-dev": "^0.0.1-security"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
