--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "csv-parse": "^5.5.3",
+    "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "pg": "^8.11.3"
   }
