--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"echo \" Lleva! \"",
     "start": "nodemon src/index.js"
   },
   "author": "",
