--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "countries_app1",
   "version": "1.0.0",
-  "description": "- Frontend\r     - @reduxjs/toolkit\r     - axios\r     - react-bootstrap & react-router-bootstrap\r     - react-redux",
+  "description": "A fullstack app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
