--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "countries_app1",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:3001/",
   "dependencies": {
     "-": "^0.0.1",
     "@reduxjs/toolkit": "^1.8.5",
