--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "countries_app1",
+  "name": "my-webpack-project",
   "version": "1.0.0",
-  "description": "A fullstack app",
+  "description": "My webpack project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,11 +11,17 @@
     "server": "npm start --prefix server",
     "client": "npm start --prefix client",
     "start": "concurrently --kill-others \"npm run server\" \"npm run client\"",
-    "build":"npm run build --prefix client && npm run build --prefix server"
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "@webpack-cli/generators": "^3.0.7",
+    "concurrently": "^8.2.2",
+    "webpack-cli": "^5.1.4"
   }
 }
