--- a/package.json
+++ b/package.json
@@ -11,17 +11,12 @@
     "server": "npm start --prefix server",
     "client": "npm start --prefix client",
     "start": "concurrently --kill-others \"npm run server\" \"npm run client\"",
-    "build": "webpack --mode=production --node-env=production",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "build": "npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@webpack-cli/generators": "^3.0.7",
-    "concurrently": "^8.2.2",
-    "webpack-cli": "^5.1.4"
+    "concurrently": "^8.2.2"
+
   }
 }
