--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"echo \" Lleva! \"",
+    "build": "echo \" Lleva! \"",
     "start": "nodemon src/index.js"
   },
   "author": "",
@@ -15,7 +15,7 @@
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "pg": "^8.11.3"
   }
-
 }
