--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo \" Lleva! \"",
+    "build": "cd .. && npm run build --prefix client",
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
